Added Jabatan API Resources
