# routes/api.php
@@ -21,3 +21,7 @@ use Illuminate\Http\Request;
 Route::get('/', 'Controller@index');
 Route::post('/authentication', 'AuthController@verifyCredentials');
 Route::get('/profil', 'Pegawai\PegawaiController@profil');
+
+Route::prefix('/master')->group(function() {
+   Route::apiResource('/jabatan', 'Master\JabatanController');
+});
